--- a/frontend-react/Dockerfile
+++ b/frontend-react/Dockerfile
@@ -1,13 +1,15 @@
-# Etapa de construcción
-FROM node:16 AS build
-#WORKDIR /
-COPY package.json .
-RUN npm install
+#Stage 1
+FROM node:18-alpine AS builder
+WORKDIR /app
+COPY package*.json .
+COPY yarn*.lock .
+RUN yarn install
 COPY . .
-RUN npm run build
+RUN yarn build
 
-# Etapa de producción
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+#Stage 2
+FROM nginx:1.19.0
+WORKDIR /usr/share/nginx/html
+RUN rm -rf ./*
+COPY --from=builder /app/build .
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
