Updates SOA project

--- a/soa/auth-service/Dockerfile
+++ b/soa/auth-service/Dockerfile
@@ -9,18 +9,8 @@ RUN mvn -f /home/app/pom.xml clean package
 #
 # Package stage
 #
-
-# Use an official Java runtime as a parent image
 FROM amazoncorretto:21.0.4-alpine3.18
-
-# Set the working directory in the container
 WORKDIR /app
-
-# Copy the JAR file into the container
-COPY target/mvc-0.0.1-SNAPSHOT.jar app.jar
-
-# Expose the port that the application will run on
+COPY target/auth-service-1.0.0.jar app.jar
 EXPOSE 8080
-
-# Run the JAR file
 ENTRYPOINT ["java", "-jar", "app.jar"]
