--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - mysql
 
   frontend:
-    build: /frontend-react
+    build: /frontend-react/.
     ports:
       - "3000:80"
     depends_on:
