--- a/soa/auth-service/pom.xml
+++ b/soa/auth-service/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.14</version> <!-- Verifica la versión más reciente -->
+        </dependency>
     </dependencies>
 
     <build>
