--- a/soa/auth-service/src/main/resources/application.properties
+++ b/soa/auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8085
+server.port=8080
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -6,3 +6,21 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Habilitar SpringDoc OpenAPI
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+#DFEBUG SQL
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+# Habilitar el logging de SQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar los parámetros de las consultas SQL
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# Nivel de logging para Hibernate (opcional, pero recomendado)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
