--- a/soa/payment-service/src/main/resources/application.properties
+++ b/soa/payment-service/src/main/resources/application.properties
@@ -1,1 +1,24 @@
-spring.application.name=mvc
+sserver.port=8084
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+# Habilitar SpringDoc OpenAPI
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+#DFEBUG SQL
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+# Habilitar el logging de SQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar los parámetros de las consultas SQL
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# Nivel de logging para Hibernate (opcional, pero recomendado)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
