--- a/soa/catalog-service/Dockerfile
+++ b/soa/catalog-service/Dockerfile
@@ -11,6 +11,6 @@ RUN mvn -f /home/app/pom.xml clean package
 #
 FROM amazoncorretto:21.0.4-alpine3.18
 WORKDIR /app
-COPY target/auth-service-1.0.0.jar app.jar
+COPY target/catalog-service-1.0.0.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
