--- a/soa/auth-service/src/main/resources/application.properties
+++ b/soa/auth-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
+spring.h2.console.settings.web-allow-others=true
 # Habilitar SpringDoc OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
