--- a/soa/payment-service/src/main/resources/application.properties
+++ b/soa/payment-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-sserver.port=8083
+server.port=8083
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
 # Habilitar SpringDoc OpenAPI
 springdoc.api-docs.enabled=true
