--- a/microservicios/api-gateway/src/main/resources/application.properties
+++ b/microservicios/api-gateway/src/main/resources/application.properties
@@ -31,8 +31,12 @@ spring.cloud.gateway.routes[5].filters[0]=RewritePath=/auth/swagger-ui/(?<segmen
 
 spring.cloud.gateway.routes[6].id=catalog-service-swagger
 spring.cloud.gateway.routes[6].uri=lb://catalog-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/auth/swagger-ui/**
-spring.cloud.gateway.routes[6].filters[0]=RewritePath=/auth/swagger-ui/(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[6].predicates[0]=Path=/catalog/swagger-ui/**
+spring.cloud.gateway.routes[6].filters[0]=RewritePath=/catalog/swagger-ui/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[7].id=analitica-service
+spring.cloud.gateway.routes[7].uri=lb://analitica-service
+spring.cloud.gateway.routes[7].predicates[0]=Path=/analitica/**
 
 # Eureka client configuration
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
