--- a/microservicios/auth-service/src/main/resources/application.properties
+++ b/microservicios/auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=0
+server.port=8080
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 spring.application.name=auth-service
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -9,22 +9,34 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
-# Habilitar SpringDoc OpenAPI
+# Habilita SpringDoc OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-#DFEBUG SQL
+#DEBUG SQL
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-# Habilitar el logging de SQL
+# Habilita el logging de SQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Mostrar los parámetros de las consultas SQL
+# Muestra los parámetros de las consultas SQL
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-# Nivel de logging para Hibernate (opcional, pero recomendado)
+# Nivel de logging para Hibernate
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+#Configuracion de actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+# Configuración de la inicialización diferida del datasource
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.initialization-mode=always
+
+# Configuración común de Kafka
+spring.kafka.bootstrap-servers=kafka:9092
+
+# Configuración del Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
