--- a/microservicios/docker-compose.yml
+++ b/microservicios/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./eureka-server
     ports:
-      - "8761:8761"
+      - 8761:8761
     networks:
       - tienda-network
 
@@ -15,7 +15,7 @@ services:
     build:
       context: ./api-gateway
     ports:
-      - "8080:8080"
+      - 8079:8079
     networks:
       - tienda-network
     depends_on:
@@ -29,6 +29,8 @@ services:
       - tienda-network
     environment:
       - EUREKA_SERVER=http://eureka-server:8761/eureka
+    depends_on:
+      - analitica-service
 
   catalog-service:
     image: catalog-service
@@ -56,6 +58,19 @@ services:
       - tienda-network
     environment:
       - EUREKA_SERVER=http://eureka-server:8761/eureka
+    depends_on:
+      - analitica-service
+
+  analitica-service:
+    image: analitica-service
+    build:
+      context: ./analitica-service
+    networks:
+      - tienda-network
+    environment:
+      - EUREKA_SERVER=http://eureka-server:8761/eureka
+    depends_on:
+      - kafka
 
   notification-service:
     image: notification-service
@@ -66,30 +81,61 @@ services:
     environment:
       - EUREKA_SERVER=http://eureka-server:8761/eureka
 
-  #prometheus:
-  #  image: prom/prometheus
-  #  ports:
-  #    - "9090:9090"
-  #  volumes:
-  #    - ./prometheus.yml:/etc/prometheus/prometheus.yml
-  #  networks:
-  ##    - tienda-network
-  # depends_on:
-  ##   - api-gateway
-  #    - auth-service
-  #    - catalog-service
-  #    - order-service
-  #    - payment-service
-  #    - notification-service
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - tienda-network
+    depends_on:
+      - api-gateway
+      - auth-service
+      - catalog-service
+      - order-service
+      - payment-service
+      - notification-service
+      - analitica-service
 
-  #grafana:
-  #  image: grafana/grafana
-  #  ports:
-  #    - "3000:3000"
-  #  networks:
-  #    - tienda-network
-  #  depends_on:
-  #    - prometheus
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    depends_on:
+      - zookeeper
+    networks:
+      - tienda-network
+
+  zookeeper:
+      image: wurstmeister/zookeeper
+      ports:
+        - "2181:2181"
+      networks:
+        - tienda-network
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=123456
+      - GF_DATASOURCES_PATH=/etc/grafana/provisioning/datasources
+    volumes:
+      - ./grafana/datasources:/etc/grafana/provisioning/datasources
+      - ./grafana/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/dashboards_json:/var/lib/grafana/dashboards
+    restart: always
+    networks:
+      - tienda-network
+    depends_on:
+      - prometheus
 
 networks:
   tienda-network:
