--- a/microservicios/eureka-server/src/main/resources/application.properties
+++ b/microservicios/eureka-server/src/main/resources/application.properties
@@ -6,5 +6,6 @@ eureka.instance.prefer-ip-address=true
 eureka.service-url.defaultZone: http://eureka-server:8761/eureka
 logging.level.com.netflix.eureka=DEBUG
 logging.level.com.netflix.discovery=DEBUG
+#Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
