--- a/microservicios/notification-service/src/main/resources/application.properties
+++ b/microservicios/notification-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=0
-spring.application.name=notificacion-service
+server.port=8084
+spring.application.name=notification-service
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -11,22 +11,25 @@ spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 
 
-# Habilitar SpringDoc OpenAPI
+# Habilita SpringDoc OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-#DFEBUG SQL
+#DEBUG SQL
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-# Habilitar el logging de SQL
+# Habilita el logging de SQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Mostrar los parámetros de las consultas SQL
+# Muestra los parámetros de las consultas SQL
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-# Nivel de logging para Hibernate (opcional, pero recomendado)
+# Nivel de logging para Hibernate
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+# Configuración de la inicialización diferida del datasource
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.initialization-mode=always
