--- a/microservicios/payment-service/pom.xml
+++ b/microservicios/payment-service/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-core</artifactId>
 			<version>1.9.0</version>
@@ -57,6 +62,7 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
